--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+    
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Liifestyle Store</title>
+    <title>Lifestyle Store</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -21,7 +24,7 @@
           <content><a href="Signup.html" target="_blank">Signup</a></content>
         </div>
         <div class="Login">
-          <content><a href="Login.html" target="_blank"> Login</a></content>
+          <content><a href="Login.html" target="_blank">Login</a></content>
         </div>
       </div>
     </div> 
@@ -32,7 +35,7 @@
           <h1>We sell Lifestyle.</h1>
           <p>Flat 40% OFF on Premium Brands</p>
           <br /><br />
-          <a class="btn" href="#">Shop Now</a>
+          <a class="btn" href="product_page.html" target="_blank">Shop Now</a>
         </div>
       </div>
     </div>
